--- a/css/testmobile.css
+++ b/css/testmobile.css
@@ -18,7 +18,7 @@
 }
 @font-face {
   font-family: myfont6;
-  src: url(times-new-roman-bold.ttf);
+  src: url(../fonts/times-new-roman-bold.ttf);
 }
 @font-face {
   font-family: myfont7;
