--- a/lists/manga/entry.css
+++ b/lists/manga/entry.css
@@ -18,7 +18,10 @@
   font-family: myfont4;
   src: url(../../fonts/manbowlines.ttf);
 }
-
+@font-face {
+  font-family: myfont6;
+  src: url(../fonts/times-new-roman-bold.ttf);
+}
 /* Content Two for Return to home page screen */
 
 .label2 {
@@ -79,7 +82,7 @@ font-family: 'Lobster', cursive;
 font-family: 'Major Mono Display', monospace;
 */
 h2 {
-  font-family:'myfont4';
+  font-family:'myfont6';
   color:white;
   font-size: 50px;
 }
@@ -154,7 +157,8 @@ html {
 }
 
 h1 {
-  font-family: 'myfont4';
+  font-family: 'myfont6';
+  text-transform:uppercase;
   color:white;
   font-size: 30px;
   text-align: center;
