--- a/writing/paprika/mobile/main.css
+++ b/writing/paprika/mobile/main.css
@@ -37,7 +37,7 @@
 
 body {
   background-color: #272727;
-  background-image:url(../../blog/img/1.gif);
+  background-image:url(../../../blog/img/1.gif);
   background-size: 10px;
   background-attachment:fixed;
   margin:0;
