--- a/writing/paprika/mobile/style.css
+++ b/writing/paprika/mobile/style.css
@@ -10,24 +10,23 @@ h2 {
 h1 {
 color:rgb(87, 85, 76);
 font-weight: normal;
-font-size:2.4em;
+font-size:2.0em;
 line-height:1em;
 }
 h3 {
   color:rgb(94, 90, 72);
   font-weight: normal;
-  font-size:1.8em;
+  font-size:1.6em;
   text-align: center;  
   margin-top: 0em;
   margin-bottom: 0em;
 }
 
 h4 {
-  margin-top: .3em;
-  margin-bottom: .7em;
-  font-size: 4.5em;
-font-weight: normal;
-color:rgb(133, 24, 24);
+  color:rgb(87, 85, 76);
+  font-weight: normal;
+  font-size:2.4em;
+  line-height:1em;
 }
 
 h6 {
@@ -37,7 +36,7 @@ h6 {
   }
 
 .bodystuff{
-  font-size:1.3em;
+  font-size:1.1em;
   line-height: 2;
 }
 
