--- a/writing/paprika/style.css
+++ b/writing/paprika/style.css
@@ -21,13 +21,7 @@ h3 {
   margin-bottom: 0em;
 }
 
-h4 {
-  margin-top: .3em;
-  margin-bottom: .7em;
-  font-size: 4.5em;
-font-weight: normal;
-color:rgb(133, 24, 24);
-}
+
 
 h6 {
   color:rgb(211, 211, 211);
@@ -80,6 +74,8 @@ h5 {
   font-size: 5em;
   text-shadow: -0.03em 0 0.5px rgba(201, 201, 201, 0.9);
   font-weight: normal;
+  
+line-height:1em;
 }
 
 a:visited, a:link, a:active {
