--- a/writing/main.css
+++ b/writing/main.css
@@ -50,6 +50,7 @@ body {
   margin:0;
   padding:0;
   line-height:1;
+  text-shadow: -0.09em 0 0.5px rgba(228, 228, 228, 0.9);
 }
 .logo{
   box-shadow: 5px 1px 3px 2px rgba(0, 0, 0, 0.2);
@@ -93,7 +94,7 @@ a{transition: all 0.4s ease;}
 .harry{background-color:rgb(255, 255, 253);}
 
 /*right column*/
-.contentRight{padding:25px !important;background-color: rgb(255, 255, 253);;
+.contentRight{padding:25px !important;background-color: rgb(255, 255, 253);
   background-size: 10px;}
 /* md lg */ @media (min-width: 768px){.contentRight{border-left: 1px solid rgb(56, 56, 56);border-radius:0 3px 3px 0;min-height:800px;border-radius:0 3px 3px 0;}}
 
