--- a/writing/mobile/main.css
+++ b/writing/mobile/main.css
@@ -50,6 +50,7 @@ body {
   margin:0;
   padding:0;
   line-height:1;
+  text-shadow: -0.09em 0 0.5px rgba(228, 228, 228, 0.9);
 }
 .logo{
   box-shadow: 5px 1px 3px 2px rgba(0, 0, 0, 0.2);
