--- a/daily/area.css
+++ b/daily/area.css
@@ -2093,7 +2093,8 @@ pre code {
   margin-left: 0
 }
 
-@media (min-width:768px) {
+/* old: V 768px*/
+@media (min-width:1px) {
   .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9 {
     float: left
   }
