--- a/daily/main.css
+++ b/daily/main.css
@@ -20,7 +20,7 @@
 
 /*     NEW STUFF    */
 body {
-  background-color: #d5d8cb;
+  background-color: #202020;
   background-image:url(2.png);
   -webkit-background-size: cover;
     -moz-background-size: cover;
