--- a/annex/main.css
+++ b/annex/main.css
@@ -34,7 +34,7 @@
 		background: #555;
 }
 
-
+/*main stuff*/
 body {
   background-image:url(https://raw.githubusercontent.com/Omnisairen/relivepics/main/annex/0.jpg);
   background-repeat: repeat;
@@ -45,13 +45,25 @@ body {
   padding:0;
   line-height:1;
 }
+
+a:visited, a:link, a:active {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  transition: ease-in-out 0.2s;
+  text-shadow: 0.09em 0 0.5px #f5c6f5;
+}
+
+a:hover {
+  color: #f5c6f5;
+  text-shadow: -0.09em 0 0.5px #f5c6f5;
+}
 .logo{
   box-shadow: 5px 1px 3px 2px rgba(0, 0, 0, 0.2);
   margin-top:5px; /* 5px if pline-heigh is 0*/
   margin-bottom:5px;
 }
 
-p,h1,h2,h3,figcaption{font-family:'Times New Roman';
+p,a,h1,h2,h3,figcaption{font-family:'Times New Roman';
 }
 p{line-height:1.25;}
 
@@ -69,11 +81,10 @@ h2,b,strong,i,em{color:white;}
 */
 
 /*the side bar links and stuff*/
-a, a:active{color:white;text-decoration:none;font-weight:normal;font-family:'myfont2',courier,monospace;}
+a, a:active{color:white;}
 a:hover,a:focus{color: white;}
 a{transition: all 0.4s ease;}
 .text-center{text-align:center;}
-
 
 /*top left image*/
 .img-center{display:block;margin-left:auto;margin-right:auto;height:100px;}
