--- a/habitue/main.css
+++ b/habitue/main.css
@@ -34,16 +34,33 @@
 		background: #555;
 }
 
-
+/*main stuff*/
 body {
-  background-color:#000;
-  background-repeat: repeat;
-  background-size: 100% auto;
-  background-position: center top;
+  background-color:rgb(105, 105, 105);
   color:#ffffff;
   margin:0;
   padding:0;
+  font-weight: bold;
   line-height:1;
+  text-shadow: -0.09em 0 1px rgba(113, 171, 151, 0.9);
+}
+figcaption {
+  font-weight:bold;
+}
+img:hover{
+  filter: hue-rotate(90deg);
+  transition: 0.5s;
+}
+a:visited, a:link, a:active {
+  color:#ffffff;
+  text-decoration: none;
+  transition: ease-in-out 0.2s;
+  text-shadow: -0.09em 0 1px rgba(113, 171, 151, 0.9);
+}
+
+a:hover {
+  color: #fffeff;
+  text-shadow: 0.09em 0 0.5px #f5c6f5;
 }
 .logo{
   box-shadow: 5px 1px 3px 2px rgba(0, 0, 0, 0.2);
@@ -51,20 +68,12 @@ body {
   margin-bottom:5px;
 }
 
-p,h1,h2,h3,figcaption{font-family:'Times New Roman';
+p,a,h1,h2,h3,figcaption{font-family:'Times New Roman';
 }
 p{line-height:1.25;}
-a:visited, a:link, a:active {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  transition: ease-in-out 0.2s;
-  text-shadow: 0.09em 0 0.5px #f5c6f5;
-}
 
-a:hover {
-  color: #f5c6f5;
-  text-shadow: -0.09em 0 0.5px #f5c6f5;
-}
+
+
 
 /*
 
@@ -79,11 +88,10 @@ h2,b,strong,i,em{color:white;}
 */
 
 /*the side bar links and stuff*/
-a, a:active{color:white;text-decoration:none;font-weight:normal;font-family:'myfont2',courier,monospace;}
+a, a:active{color:white;}
 a:hover,a:focus{color: white;}
 a{transition: all 0.4s ease;}
 .text-center{text-align:center;}
-
 
 /*top left image*/
 .img-center{display:block;margin-left:auto;margin-right:auto;height:100px;}
@@ -92,11 +100,11 @@ a{transition: all 0.4s ease;}
 
 
 /*left column*/
-.contentLeft{padding:15px !important;background-color:rgb(0, 0, 0)}/*hr.png for mobile */
+.contentLeft{padding:15px !important;background-color:rgb(105, 105, 105)}/*hr.png for mobile */
 /* md lg */ @media (min-width: 768px){.contentLeft{min-height:800px;border-radius:0 3px 3px 0;}}
 
 /*right column*/
-.contentRight{padding:25px !important;background-color: rgb(0,0,0);
+.contentRight{padding:25px !important;background-color: rgb(105, 105, 105);
   background-size: 10px;}
 /* md lg */ @media (min-width: 768px){.contentRight{min-height:800px;border-radius:0 3px 3px 0;}}
 
@@ -207,4 +215,10 @@ th .img-responsive{
 hr{
   margin-left: 10%;
   margin-right: 10%
+}
+
+@media screen and (max-device-width: 700px) {
+  .harry {
+    display: none;
+  }
 }
