--- a/cherry/daily/main.css
+++ b/cherry/daily/main.css
@@ -42,6 +42,28 @@ body {
 }
 
 
+/*BUTTON ADD 08/02/21*/
+input {
+  background-color: black;
+  /*background-image: url(../images/img/1.gif);
+  background-size: 10px;
+  */
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.2s;
+  margin-bottom:-35px;
+  z-index:2;
+}
+input:hover{
+  text-decoration: underline;
+}
+
+/*end 08/02/21*/
 
 /*
 p,h1,h2,h3,figcaption{font-family:'Times New Roman';
