--- a/cherry/main.css
+++ b/cherry/main.css
@@ -20,7 +20,7 @@
 
 /*     NEW STUFF    */
 body {
-  background-color: #ffffff;
+  background-color:black;
   -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -41,6 +41,28 @@ body {
   text-align: right;
 }
 
+/*BUTTON ADD 08/02/21*/
+input {
+  background-color: black;
+  /*background-image: url(../images/img/1.gif);
+  background-size: 10px;
+  */
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.2s;
+  margin-bottom:-35px;
+  z-index:2;
+}
+input:hover{
+  text-decoration: underline;
+}
+
+/*end 08/02/21*/
 
 
 /*
