--- a/cherry/main.css
+++ b/cherry/main.css
@@ -1,3 +1,123 @@
+/* new stuff 08/03/31*/
+
+
+span {
+  font-size: 1.70em;
+  letter-spacing: 0.16em;
+  font-family: "Arial", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Clearfix  */
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Edit these two variables to fit page */
+/* Column padding (horizontal and vertical) */
+/* Media query breakpoints (based on images showing at their full size in 1 and 2 column layouts) */
+#content-container {
+  max-width: 1060px;
+  margin: 10 auto;
+}
+
+.gallery {
+  max-width: 100%;
+  /* 3 column layout */
+  /* 2 column layout */
+  /* 1 column layout */
+}
+.gallery .grid {
+  float: left;
+}
+@media (min-width: 950px) {
+  .gallery .grid {
+    width: 32.333333%;
+    padding: 2% 0 0 2%;
+  }
+  .gallery {
+    margin-left: 5px;
+  }
+  .hhh {
+    padding-left: 25px; padding-right:25px;
+  }
+  .button1 {
+    margin-right:20px;
+  }
+  .sub {
+    margin-bottom:-20px;
+  }
+}
+@media (max-width: 950px) {
+  .gallery .grid {
+    width: 48.5%;
+    padding: 0 3% 3% 0;
+  }
+  .gallery {
+    margin-left: 5px;
+  }
+}
+
+.gallery a {
+  position: relative;
+  display: block;
+  /* important - otherwise caption do position correctly */
+  /* Caption overlays on hover */
+}
+.gallery a img {
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  width: 100%;
+  height: auto;
+  display: block;
+  /* remove weird pixel padding */
+}
+.gallery a span {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15%;
+  color: white;
+  text-align: center;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  border: 4px solid;
+}
+.gallery a:hover span{
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 1;
+  border: 4px solid white;
+}
+.gallery a:hover img {
+  background-color:black;
+  opacity: 0.5;
+}
+
+
+
+
+
+
+/* end of new stuff */
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -70,7 +190,6 @@ p,h1,h2,h3,figcaption{font-family:'Times New Roman';
 }
 */
 h2 {
-  text-align: left;
   font-weight: bold;
   margin-top: 0px;
   padding-top: 0px;
